--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 </select>
                 <input type="number" id="totalText">
             </div>
+        </div>
 
+        <div id="buttonHolder">
             <button type="button" id="load">Load Weight</button>
         </div>
 
