--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Bar Loader</title>
+        <title>Barbell Loader</title>
         <link rel="icon" href="icon.png">
         <link href="main.css" rel="stylesheet" type="text/css" />
     </head>
